fixing overflow on top consumer box

--- a/src/apps/common/static/less/packages-b.less
+++ b/src/apps/common/static/less/packages-b.less
@@ -67,7 +67,7 @@
         width: 290px;
         .border-radius(5px, 5px, 5px, 5px);
         line-height: 16px;
-        font-size: 14px;
+        font-size: 12px;
         p {
             padding: 20px 0;
         }
@@ -86,7 +86,7 @@
         width: 290px;
         .border-radius(5px, 5px, 5px, 5px);
         line-height: 16px;
-        font-size: 14px;
+        font-size: 12px;
         p {
             padding: 20px 0;
         }
